Primer commit de la rama html

--- a/proyecto/html/index.html
+++ b/proyecto/html/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/estilo.css">
 </head>
-
 <body>
   <p>Esta página web es una página HTML válida.</p>
+	<p>Esta página web es el index</p>	
 </body>
 </html>
 
