--- a/proyecto/html/index.html
+++ b/proyecto/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Index</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/estilo.css">
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
   <p>Esta página web es una página HTML válida.</p>
