Implementar CSS en index

--- a/proyecto/html/index.html
+++ b/proyecto/html/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+  <h1>PRACTICA GIT PARA RAMÓN</h1>
   <p>Esta página web es una página HTML válida.</p>
 	<p>Esta página web es el index</p>	
+  <p class="oculto"> Este párrafo estará oculto al principio</p>
 </body>
 </html>
 
