Implementar CSS en otra página

--- a/proyecto/html/AcercaDe.html
+++ b/proyecto/html/AcercaDe.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8">
   <title>Acerca De</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/estilo.css">
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+  <h1>La otra página del ejercicio</h1>
   <p>Esta página web es una página HTML válida.</p>
 	<p>Esta página web es Acerca de Nosotros...</p>	
+  <p class="oculto">Otro párrafo oculto para Ramón</p>
 </body>
 </html>
 
